08-ingress/00-be.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-default
  labels:
    app: "be-default"
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: "be-default"
  template:
    metadata:
      labels:
        app: "be-default"
    spec:
      containers:
      - name: be-default
        image: gcr.io/kuar-demo/kuard-amd64:blue
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: be-default
  labels:
    app: "be-default"
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: "be-default"
