08-ingress/01-alpacas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca
  labels:
    app: "alpaca"
spec:
  replicas: 3
  selector:
    matchLabels: 
      app: "alpaca"
  template:
    metadata:
      labels:
        app: "alpaca"
    spec:
      containers:
      - name: alpaca
        image: gcr.io/kuar-demo/kuard-amd64:green
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: alpaca
  labels:
    app: "alpaca"
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: "alpaca"
