08-ingress/04-ingress-path.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-path
spec:
  rules:
  - host: bandicoot.localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bandicoot
            port:
              number: 8080
      - pathType: Prefix
        path: "/a/"
        backend:
          service:
            name: alpaca
            port:
              number: 8080
